--- a/nuttx/.config
+++ b/nuttx/.config
@@ -826,6 +826,7 @@ CONFIG_BQ24251_NPOLLWAITERS=1
 # CONFIG_DEBUG_BQ24251_CHARGER is not set
 # CONFIG_DEBUG_LIS2DH is not set
 # CONFIG_DEBUG_PRESSURE_DEV_LPS25H is not set
+# CONFIG_DEV_LOWCONSOLE is not set
 # CONFIG_EEPROM is not set
 CONFIG_HTS221_HUMIDITY=y
 CONFIG_HTS221_NPOLLWAITERS=1
@@ -1194,7 +1195,7 @@ CONFIG_PATH_INITIAL="/bin"
 #
 # Standard C Library Options
 #
-# CONFIG_ARCH_LOWPUTC is not set
+CONFIG_ARCH_LOWPUTC=y
 # CONFIG_ARCH_OPTIMIZED_FUNCTIONS is not set
 # CONFIG_ARCH_ROMGETC is not set
 # CONFIG_EOL_IS_BOTH_CRLF is not set
