Push errors aside to get to linker errors

--- a/nuttx/.config
+++ b/nuttx/.config
@@ -1356,7 +1356,12 @@ CONFIG_CODECS_BASE64=y
 CONFIG_NETUTILS_CODECS=y
 # CONFIG_NETUTILS_DHCPD is not set
 # CONFIG_NETUTILS_DISCOVER is not set
-# CONFIG_NETUTILS_DNSCLIENT is not set
+CONFIG_NETUTILS_DNSCLIENT=y
+CONFIG_NETUTILS_DNSCLIENT_ENTRIES=8
+CONFIG_NETUTILS_DNSCLIENT_IPv4=y
+CONFIG_NETUTILS_DNSCLIENT_MAXRESPONSE=96
+CONFIG_NETUTILS_DNSCLIENT_RECV_TIMEOUT=30
+CONFIG_NETUTILS_DNSCLIENT_RETRIES=3
 # CONFIG_NETUTILS_FTPC is not set
 # CONFIG_NETUTILS_FTPD is not set
 CONFIG_NETUTILS_JSON=y
@@ -1488,6 +1493,7 @@ CONFIG_NSH_ARCHINIT=y
 #
 # IPv4 Addresses
 #
+# CONFIG_NSH_DNS is not set
 CONFIG_NSH_DRIPADDR=0x0a000001
 CONFIG_NSH_IPADDR=0x0a000002
 CONFIG_NSH_MAX_ROUNDTRIP=20
@@ -1556,4 +1562,8 @@ CONFIG_SYSTEM_READLINE=y
 # CONFIG_TESTS_UNITY_PWRBTN is not set
 # CONFIG_TESTS_UNITY_RAMTEST is not set
 # CONFIG_TESTS_UNITY_USRSOCK is not set
+
+
+
+
 
