--- a/apps/examples/Kconfig
+++ b/apps/examples/Kconfig
@@ -16,6 +16,7 @@ source "$APPSDIR/examples/flash_test/Kconfig"
 source "$APPSDIR/examples/ftpc/Kconfig"
 source "$APPSDIR/examples/ftpd/Kconfig"
 source "$APPSDIR/examples/hello/Kconfig"
+source "$APPSDIR/examples/resetdfu/Kconfig"
 source "$APPSDIR/examples/helloxx/Kconfig"
 source "$APPSDIR/examples/hidkbd/Kconfig"
 source "$APPSDIR/examples/i2schar/Kconfig"
