--- a/nuttx/Kconfig
+++ b/nuttx/Kconfig
@@ -825,6 +825,7 @@ endmenu
 menu "Library Routines"
 source libc/Kconfig
 source libxx/Kconfig
+source mbedtls/Kconfig
 endmenu
 
 menu "Application Configuration"
