--- a/nuttx-dev/nuttx/.config
+++ b/nuttx-dev/nuttx/.config
@@ -3,6 +3,7 @@
 # Nuttx/ Configuration
 #
 
+
 #
 # Build Setup
 #
@@ -704,7 +705,7 @@ CONFIG_NETUTILS_RESOLV=y
 CONFIG_NET_RESOLV_ENTRIES=4
 CONFIG_NET_RESOLV_MAXRESPONSE=96
 # CONFIG_NETUTILS_SMTP is not set
-CONFIG_NETUTILS_TELNETD=y
+# CONFIG_NETUTILS_TELNETD is not set
 CONFIG_NETUTILS_TFTPC=y
 # CONFIG_NETUTILS_THTTPD is not set
 CONFIG_NETUTILS_UIPLIB=y
@@ -734,7 +735,11 @@ CONFIG_NSH_READLINE=y
 # CONFIG_NSH_DISABLE_CD is not set
 # CONFIG_NSH_DISABLE_CP is not set
 # CONFIG_NSH_DISABLE_CMP is not set
-# CONFIG_NSH_DISABLE_DD is not set
+CONFIG_NSH_DISABLE_DD=y
+
+CONFIG_NSH_DISABLE_PS=y
+CONFIG_NSH_DISABLE_IFUPDOWN=y
+
 # CONFIG_NSH_DISABLE_DF is not set
 # CONFIG_NSH_DISABLE_DELROUTE is not set
 # CONFIG_NSH_DISABLE_ECHO is not set
@@ -744,19 +749,19 @@ CONFIG_NSH_READLINE=y
 # CONFIG_NSH_DISABLE_GET is not set
 # CONFIG_NSH_DISABLE_HELP is not set
 # CONFIG_NSH_DISABLE_HEXDUMP is not set
-# CONFIG_NSH_DISABLE_IFCONFIG is not set
+CONFIG_NSH_DISABLE_IFCONFIG=y
 # CONFIG_NSH_DISABLE_KILL is not set
-# CONFIG_NSH_DISABLE_LOSETUP is not set
+CONFIG_NSH_DISABLE_LOSETUP=y
 # CONFIG_NSH_DISABLE_LS is not set
 # CONFIG_NSH_DISABLE_MB is not set
 # CONFIG_NSH_DISABLE_MKDIR is not set
-# CONFIG_NSH_DISABLE_MKFATFS is not set
+CONFIG_NSH_DISABLE_MKFATFS=y
 # CONFIG_NSH_DISABLE_MKFIFO is not set
-# CONFIG_NSH_DISABLE_MKRD is not set
+CONFIG_NSH_DISABLE_MKRD=y
 # CONFIG_NSH_DISABLE_MH is not set
 # CONFIG_NSH_DISABLE_MOUNT is not set
 # CONFIG_NSH_DISABLE_MW is not set
-# CONFIG_NSH_DISABLE_PING is not set
+CONFIG_NSH_DISABLE_PING=y
 # CONFIG_NSH_DISABLE_PUT is not set
 # CONFIG_NSH_DISABLE_PWD is not set
 # CONFIG_NSH_DISABLE_RM is not set
@@ -796,21 +801,12 @@ CONFIG_NSH_CONSOLE=y
 #
 # CONFIG_NSH_CONDEV is not set
 CONFIG_NSH_ARCHINIT=y
-CONFIG_NSH_TELNET=y
-CONFIG_NSH_TELNETD_PORT=23
-CONFIG_NSH_TELNETD_DAEMONPRIO=100
-CONFIG_NSH_TELNETD_DAEMONSTACKSIZE=2048
-CONFIG_NSH_TELNETD_CLIENTPRIO=100
-CONFIG_NSH_TELNETD_CLIENTSTACKSIZE=2048
-CONFIG_NSH_IOBUFFER_SIZE=512
-# CONFIG_NSH_TELNET_LOGIN is not set
 # CONFIG_NSH_DHCPC is not set
 CONFIG_NSH_IPADDR=0x0a00020f
 CONFIG_NSH_DRIPADDR=0x0a000202
 CONFIG_NSH_NETMASK=0xffffff00
 # CONFIG_NSH_DNS is not set
 CONFIG_NSH_NOMAC=y
-CONFIG_NSH_MAX_ROUNDTRIP=20
 
 #
 # NxWidgets/NxWM
