--- a/nuttx/.config
+++ b/nuttx/.config
@@ -391,8 +391,8 @@ CONFIG_STM32_DISABLE_IDLE_SLEEP_DURING_DEBUG=y
 # CONFIG_STM32_DMACAPABLE is not set
 # CONFIG_STM32_FORCEPOWER is not set
 CONFIG_STM32_HAVE_ONLY_EOCIE=y
-# CONFIG_STM32_JTAG_DISABLE is not set
-CONFIG_STM32_JTAG_FULL_ENABLE=y
+CONFIG_STM32_JTAG_DISABLE=y
+# CONFIG_STM32_JTAG_FULL_ENABLE is not set
 # CONFIG_STM32_JTAG_NOJNTRST_ENABLE is not set
 # CONFIG_STM32_JTAG_SW_ENABLE is not set
 CONFIG_STM32_KEEP_CORE_CLOCK_ENABLED_IN_IDLE_MODES=y
@@ -538,7 +538,7 @@ CONFIG_NSH_MMCSDSPIPORTNO=0
 # CONFIG_BOARDCTL_TSCTEST is not set
 # CONFIG_BOARD_DEEPSLEEP_RECONFIGURE_GPIOS is not set
 # CONFIG_BOARD_DEEPSLEEP_SKIP_PMSTOP is not set
-# CONFIG_BOARD_DISABLE_DEEPSLEEP is not set
+CONFIG_BOARD_DISABLE_DEEPSLEEP=y
 # CONFIG_BOARD_ENABLE_FILL_FLASH is not set
 CONFIG_BOARD_ENABLE_FIX_FOR_INVALID_OPTION_BYTES=y
 CONFIG_BOARD_HALTIAN_HWWDG=y
@@ -934,12 +934,12 @@ CONFIG_USBDEV=y
 # USB Device Controller Driver Options
 #
 # CONFIG_ARCH_USBDEV_STALLQUEUE is not set
-CONFIG_USBDEV_BUSPOWERED=y
+# CONFIG_USBDEV_BUSPOWERED is not set
 # CONFIG_USBDEV_DMA is not set
-# CONFIG_USBDEV_DUALSPEED is not set
+CONFIG_USBDEV_DUALSPEED=y
 # CONFIG_USBDEV_ISOCHRONOUS is not set
 CONFIG_USBDEV_MAXPOWER=500
-# CONFIG_USBDEV_SELFPOWERED is not set
+CONFIG_USBDEV_SELFPOWERED=y
 # CONFIG_USBDEV_TRACE is not set
 
 #
@@ -1126,7 +1126,7 @@ CONFIG_FS_NAMED_SEMPATH="/var/lock"
 CONFIG_FS_PROCFS=y
 # CONFIG_FS_RAMMAP is not set
 CONFIG_FS_READABLE=y
-# CONFIG_FS_ROMFS is not set
+CONFIG_FS_ROMFS=y
 # CONFIG_FS_SMARTFS is not set
 CONFIG_FS_WRITABLE=y
 # CONFIG_NFS is not set
@@ -1155,8 +1155,92 @@ CONFIG_SYSLOG_TIMESTAMP=y
 #
 # Graphics Support
 #
-# CONFIG_NX is not set
+CONFIG_NX=y
+CONFIG_NX_BGCOLOR=0x0
 CONFIG_NX_LCDDRIVER=y
+CONFIG_NX_NPLANES=1
+# CONFIG_NX_WRITEONLY is not set
+
+#
+# Supported Pixel Depths
+#
+CONFIG_NX_DISABLE_16BPP=y
+# CONFIG_NX_DISABLE_1BPP is not set
+CONFIG_NX_DISABLE_24BPP=y
+CONFIG_NX_DISABLE_2BPP=y
+CONFIG_NX_DISABLE_32BPP=y
+CONFIG_NX_DISABLE_4BPP=y
+CONFIG_NX_DISABLE_8BPP=y
+CONFIG_NX_PACKEDMSFIRST=y
+
+#
+# Input Devices
+#
+# CONFIG_NX_KBD is not set
+# CONFIG_NX_XYINPUT is not set
+# CONFIG_NX_XYINPUT_MOUSE is not set
+CONFIG_NX_XYINPUT_NONE=y
+# CONFIG_NX_XYINPUT_TOUCHSCREEN is not set
+
+#
+# Framed Window Borders
+#
+# CONFIG_NXTK_AUTORAISE is not set
+CONFIG_NXTK_BORDERWIDTH=4
+CONFIG_NXTK_DEFAULT_BORDERCOLORS=y
+
+#
+# Font Selections
+#
+CONFIG_NXFONTS_CHARBITS=7
+CONFIG_NXFONT_MONO5X8=y
+# CONFIG_NXFONT_PIXEL_LCD_MACHINE is not set
+# CONFIG_NXFONT_PIXEL_UNICODE is not set
+CONFIG_NXFONT_SANS17X22=y
+# CONFIG_NXFONT_SANS17X23B is not set
+# CONFIG_NXFONT_SANS20X26 is not set
+# CONFIG_NXFONT_SANS20X27B is not set
+# CONFIG_NXFONT_SANS22X29 is not set
+# CONFIG_NXFONT_SANS22X29B is not set
+# CONFIG_NXFONT_SANS23X27 is not set
+# CONFIG_NXFONT_SANS28X37 is not set
+# CONFIG_NXFONT_SANS28X37B is not set
+# CONFIG_NXFONT_SANS39X48 is not set
+# CONFIG_NXFONT_SANS40X49B is not set
+# CONFIG_NXFONT_SERIF22X28B is not set
+# CONFIG_NXFONT_SERIF22X29 is not set
+# CONFIG_NXFONT_SERIF27X38B is not set
+# CONFIG_NXFONT_SERIF29X37 is not set
+# CONFIG_NXFONT_SERIF38X48 is not set
+# CONFIG_NXFONT_SERIF38X49B is not set
+# CONFIG_NXFONT_X11_MISC_FIXED_10X20 is not set
+# CONFIG_NXFONT_X11_MISC_FIXED_4X6 is not set
+# CONFIG_NXFONT_X11_MISC_FIXED_5X7 is not set
+# CONFIG_NXFONT_X11_MISC_FIXED_5X8 is not set
+# CONFIG_NXFONT_X11_MISC_FIXED_6X10 is not set
+# CONFIG_NXFONT_X11_MISC_FIXED_6X12 is not set
+# CONFIG_NXFONT_X11_MISC_FIXED_6X13 is not set
+# CONFIG_NXFONT_X11_MISC_FIXED_6X13B is not set
+# CONFIG_NXFONT_X11_MISC_FIXED_6X13O is not set
+# CONFIG_NXFONT_X11_MISC_FIXED_6X9 is not set
+# CONFIG_NXFONT_X11_MISC_FIXED_7X13 is not set
+# CONFIG_NXFONT_X11_MISC_FIXED_7X13B is not set
+# CONFIG_NXFONT_X11_MISC_FIXED_7X13O is not set
+# CONFIG_NXFONT_X11_MISC_FIXED_7X14 is not set
+# CONFIG_NXFONT_X11_MISC_FIXED_7X14B is not set
+# CONFIG_NXFONT_X11_MISC_FIXED_8X13 is not set
+# CONFIG_NXFONT_X11_MISC_FIXED_8X13B is not set
+# CONFIG_NXFONT_X11_MISC_FIXED_8X13O is not set
+# CONFIG_NXFONT_X11_MISC_FIXED_9X15 is not set
+# CONFIG_NXFONT_X11_MISC_FIXED_9X15B is not set
+# CONFIG_NXFONT_X11_MISC_FIXED_9X18 is not set
+# CONFIG_NXFONT_X11_MISC_FIXED_9X18B is not set
+# CONFIG_NXTERM is not set
+
+#
+# NX Multi-user only options
+#
+# CONFIG_NX_MULTIUSER is not set
 
 #
 # Memory Management
@@ -1248,14 +1332,34 @@ CONFIG_MTLS=y
 #
 # Thingsee platform
 #
+CONFIG_LOG_FILE_NAME="LOGS.txt"
 # CONFIG_THINGSEE_BLUETOOTH_MODULE is not set
-# CONFIG_THINGSEE_LIB is not set
-# CONFIG_THINGSEE_UI is not set
+CONFIG_THINGSEE_CHARGER_MODULE=y
+# CONFIG_THINGSEE_CHARGER_MODULE_DBG is not set
+# CONFIG_THINGSEE_DEEPSLEEP_DEBUG is not set
+# CONFIG_THINGSEE_DEEPSLEEP_WATCHDOG is not set
+CONFIG_THINGSEE_DEEPSLEEP_WATCHDOG_TIMEOUT=1200
+CONFIG_THINGSEE_DISABLE_DEVICE_INFO_TABLE=y
+CONFIG_THINGSEE_EMMC_MODULE=y
+# CONFIG_THINGSEE_EMMC_MODULE_DBG is not set
+CONFIG_THINGSEE_GPS_MODULE=y
+CONFIG_THINGSEE_LIB=y
+CONFIG_THINGSEE_NINEAXELS_FUSION_MADGWICK=y
+# CONFIG_THINGSEE_NINEAXELS_FUSION_MAHONY is not set
+CONFIG_THINGSEE_NINEAXELS_MODULE=y
+CONFIG_THINGSEE_UI=y
+CONFIG_THINGSEE_UI_DFU_MODE=y
 
 #
 # Thingsee engine
 #
-# CONFIG_THINGSEE_ENGINE is not set
+CONFIG_THINGSEE_CONNECTORS=y
+CONFIG_THINGSEE_CONNECTORS_DEBUG=y
+# CONFIG_THINGSEE_CONNECTORS_PROTOCOL_DEBUG is not set
+# CONFIG_THINGSEE_CONNECTOR_KII is not set
+# CONFIG_THINGSEE_CONNECTOR_MESHBLU is not set
+CONFIG_THINGSEE_CONNECTOR_TS=y
+CONFIG_THINGSEE_ENGINE=y
 
 #
 # Built-In Applications
@@ -1283,6 +1387,7 @@ CONFIG_EXAMPLES_HELLO=y
 # CONFIG_EXAMPLES_IGMP is not set
 # CONFIG_EXAMPLES_JSON is not set
 # CONFIG_EXAMPLES_KEYPADTEST is not set
+# CONFIG_EXAMPLES_LCDRW is not set
 # CONFIG_EXAMPLES_MM is not set
 # CONFIG_EXAMPLES_MODBUS is not set
 # CONFIG_EXAMPLES_MOUNT is not set
@@ -1323,14 +1428,7 @@ CONFIG_EXAMPLES_RESETDFU=y
 # CONFIG_EXAMPLES_THTTPD is not set
 # CONFIG_EXAMPLES_TIFF is not set
 # CONFIG_EXAMPLES_TOUCHSCREEN is not set
-CONFIG_EXAMPLES_UBMODEM=y
-CONFIG_EXAMPLES_UBMODEM_APN_IPADDR="0.0.0.0"
-CONFIG_EXAMPLES_UBMODEM_APN_NAME="internet"
-CONFIG_EXAMPLES_UBMODEM_APN_PASSWD=""
-CONFIG_EXAMPLES_UBMODEM_APN_USER=""
-CONFIG_EXAMPLES_UBMODEM_DAEMONPRIO=100
-CONFIG_EXAMPLES_UBMODEM_DAEMONSTACKSIZE=2048
-CONFIG_EXAMPLES_UBMODEM_SIMPIN="1234"
+# CONFIG_EXAMPLES_UBMODEM is not set
 # CONFIG_EXAMPLES_UDGRAM is not set
 # CONFIG_EXAMPLES_UDP is not set
 # CONFIG_EXAMPLES_USBSERIAL is not set
@@ -1375,9 +1473,17 @@ CONFIG_NETUTILS_DNSCLIENT_RETRIES=3
 # CONFIG_NETUTILS_FTPC is not set
 # CONFIG_NETUTILS_FTPD is not set
 CONFIG_NETUTILS_JSON=y
-# CONFIG_NETUTILS_JSON_PARSE_IGNORE_MISSING_NULL_TERMINATOR is not set
+CONFIG_NETUTILS_JSON_PARSE_IGNORE_MISSING_NULL_TERMINATOR=y
 CONFIG_NETUTILS_NETLIB=y
-# CONFIG_NETUTILS_NTPCLIENT is not set
+CONFIG_NETUTILS_NTPCLIENT=y
+CONFIG_NETUTILS_NTPCLIENT_NUM_SAMPLES=5
+CONFIG_NETUTILS_NTPCLIENT_POLLDELAYSEC=60
+CONFIG_NETUTILS_NTPCLIENT_PORTNO=123
+CONFIG_NETUTILS_NTPCLIENT_RETRIES=60
+CONFIG_NETUTILS_NTPCLIENT_SERVERHOSTNAME="0.pool.ntp.org;1.pool.ntp.org;2.pool.ntp.org"
+CONFIG_NETUTILS_NTPCLIENT_SERVERPRIO=100
+CONFIG_NETUTILS_NTPCLIENT_SIGWAKEUP=18
+CONFIG_NETUTILS_NTPCLIENT_STACKSIZE=2048
 # CONFIG_NETUTILS_PPPD is not set
 # CONFIG_NETUTILS_SMTP is not set
 # CONFIG_NETUTILS_TELNETD is not set
@@ -1406,7 +1512,7 @@ CONFIG_NSH_LIBRARY=y
 CONFIG_NSH_BUILTIN_APPS=y
 # CONFIG_NSH_CLE is not set
 # CONFIG_NSH_CMDPARMS is not set
-CONFIG_NSH_DISABLEBG=y
+# CONFIG_NSH_DISABLEBG is not set
 CONFIG_NSH_DISABLE_SEMICOLON=y
 CONFIG_NSH_LINELEN=128
 CONFIG_NSH_MAXARGUMENTS=6
@@ -1416,7 +1522,7 @@ CONFIG_NSH_READLINE=y
 #
 # Disable Individual commands
 #
-CONFIG_NSH_DISABLE_ADDROUTE=y
+# CONFIG_NSH_DISABLE_ADDROUTE is not set
 CONFIG_NSH_DISABLE_BASE64DEC=y
 CONFIG_NSH_DISABLE_BASE64ENC=y
 # CONFIG_NSH_DISABLE_CAT is not set
@@ -1434,8 +1540,8 @@ CONFIG_NSH_DISABLE_EXIT=y
 CONFIG_NSH_DISABLE_GET=y
 # CONFIG_NSH_DISABLE_HELP is not set
 CONFIG_NSH_DISABLE_HEXDUMP=y
-CONFIG_NSH_DISABLE_IFCONFIG=y
-CONFIG_NSH_DISABLE_IFUPDOWN=y
+# CONFIG_NSH_DISABLE_IFCONFIG is not set
+# CONFIG_NSH_DISABLE_IFUPDOWN is not set
 # CONFIG_NSH_DISABLE_KILL is not set
 CONFIG_NSH_DISABLE_LOSETUP=y
 # CONFIG_NSH_DISABLE_LS is not set
@@ -1473,9 +1579,22 @@ CONFIG_NSH_PROC_MOUNTPOINT="/proc"
 #
 # Scripting Support
 #
+CONFIG_NSH_ARCHROMFS=y
+# CONFIG_NSH_CUSTOMROMFS is not set
+# CONFIG_NSH_DEFAULTROMFS is not set
 # CONFIG_NSH_DISABLESCRIPT is not set
 # CONFIG_NSH_DISABLE_ITEF is not set
 # CONFIG_NSH_DISABLE_LOOPS is not set
+CONFIG_NSH_FATDEVNO=1
+CONFIG_NSH_FATMOUNTPT="/tmp"
+CONFIG_NSH_FATNSECTORS=2
+CONFIG_NSH_FATSECTSIZE=512
+CONFIG_NSH_INITSCRIPT="init.d/rcS"
+CONFIG_NSH_ROMFSDEVNO=0
+CONFIG_NSH_ROMFSETC=y
+CONFIG_NSH_ROMFSMOUNTPT="/etc"
+# CONFIG_NSH_ROMFSRC is not set
+CONFIG_NSH_ROMFSSECTSIZE=64
 
 #
 # Console Configuration
@@ -1489,7 +1608,7 @@ CONFIG_USBDEV_MINOR=0
 #
 # USB Device Trace Support
 #
-CONFIG_NSH_ARCHINIT=y
+# CONFIG_NSH_ARCHINIT is not set
 # CONFIG_NSH_USBDEV_TRACE is not set
 
 #
@@ -1515,6 +1634,7 @@ CONFIG_NSH_NETMASK=0xffffff00
 #
 # NxWidgets/NxWM
 #
+# CONFIG_NXWIDGETS is not set
 
 #
 # Platform-specific Support
@@ -1531,8 +1651,8 @@ CONFIG_NSH_NETMASK=0xffffff00
 # Connection manager
 #
 CONFIG_SYSTEM_CONMAN=y
-# CONFIG_SYSTEM_CONMAN_DEBUG is not set
-# CONFIG_SYSTEM_CONMAN_VERBOSE is not set
+CONFIG_SYSTEM_CONMAN_DEBUG=y
+CONFIG_SYSTEM_CONMAN_VERBOSE=y
 CONFIG_SYSTEM_CONMAN_WIFI=y
 # CONFIG_SYSTEM_CUTERM is not set
 
@@ -1552,12 +1672,24 @@ CONFIG_SYSTEM_READLINE=y
 # CONFIG_SYSTEM_SDCARD is not set
 # CONFIG_SYSTEM_SUDOKU is not set
 # CONFIG_SYSTEM_SYSINFO is not set
-# CONFIG_THINGSEE_DISPLAY_MODULE is not set
+CONFIG_THINGSEE_DISPLAY_ALIGNMENT=y
+CONFIG_THINGSEE_DISPLAY_BKGND_COLOR=0
+CONFIG_THINGSEE_DISPLAY_FOREGND_COLOR=1
+# CONFIG_THINGSEE_DISPLAY_INC_IMG_EXAMPLE is not set
+CONFIG_THINGSEE_DISPLAY_INVERT=y
+CONFIG_THINGSEE_DISPLAY_MODULE=y
+# CONFIG_THINGSEE_DISPLAY_TRACES is not set
 
 #
 # u-blox GPS module support
 #
-# CONFIG_SYSTEM_UBGPS is not set
+CONFIG_SYSTEM_UBGPS=y
+# CONFIG_SYSTEM_UBGPS_DEBUG is not set
+# CONFIG_SYSTEM_UBGPS_LNA_CONTROL is not set
+CONFIG_SYSTEM_UBGPS_LNA_PIN=16
+# CONFIG_SYSTEM_UBGPS_VERBOSE_DEBUG is not set
+# CONFIG_UBGPS_ASSIST_UPDATER is not set
+# CONFIG_UBGPS_PSM_MODE is not set
 
 #
 # u-blox Cellular modem library
@@ -1577,12 +1709,12 @@ CONFIG_UBMODEM_USRSOCK=y
 # Automated test applications
 #
 # CONFIG_TESTS_DEFAULT_CONMAN is not set
-CONFIG_TESTS_UNITY=y
+# CONFIG_TESTS_UNITY is not set
 # CONFIG_TESTS_UNITY_CONMAN is not set
 # CONFIG_TESTS_UNITY_DEV_ERR is not set
 # CONFIG_TESTS_UNITY_HOST is not set
-CONFIG_TESTS_UNITY_LIBM=y
-CONFIG_TESTS_UNITY_PWRBTN=y
-CONFIG_TESTS_UNITY_RAMTEST=y
+# CONFIG_TESTS_UNITY_LIBM is not set
+# CONFIG_TESTS_UNITY_PWRBTN is not set
+# CONFIG_TESTS_UNITY_RAMTEST is not set
 # CONFIG_TESTS_UNITY_USRSOCK is not set
 
